--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
-# server port
-server.port=8090
-
-# config h2 database
-spring.datasource.url=jdbc:h2:mem:usuariosdb
-spring.datasource.username=naikon
-spring.datasource.password=sa
-spring.datasource.driver-class-name=org.h2.Driver
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:mysql://localhost/db_z_project?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=debug
