--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8090
 spring.datasource.url=jdbc:mysql://localhost/db_z_project?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
